--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,4 +1,10 @@
-.imgMovie{
+.card-img-top{
     width: 4rem;
     height: auto;
+}
+.container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
